# rust-resource-monitor

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: aggregator.rs  api.rs  bus.rs  config.rs  console.rs  db.rs  lib.rs  main.rs  metrics.rs  rpc.rs  runtime.rs  storage.rs
src/web/: mod.rs  templates.rs  widgets.rs
src/web/static/: styles.css  widgets.js
tests/: api.rs  db.rs  metrics.rs  rpc_stream.rs  storage.rs
