[package]
name = "resource_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time"] }
tokio-util = "0.7"
tokio-stream = { version = "0.1", features = ["sync"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.29"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
thiserror = "1"
nuts = "0.2.1"
crossterm = "0.27"
tarpc = { version = "0.34", features = ["tokio1", "serde-transport", "tcp"] }
tokio-serde = { version = "0.8", features = ["json"] }
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
serde_json = "1"
axum = "0.7"
tower = { version = "0.5", features = ["util"] }
